fix(Scroller): make overflow auto for stop showing scrollbar when it's unnecessary

--- a/src/components/Scroller/Scroller.css
+++ b/src/components/Scroller/Scroller.css
@@ -6,7 +6,7 @@
 
 .container {
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 100%;
   height: 100%;
   min-height: 1px;
